# geoutils

./: .gitignore  README.md  condaEnv.yml  pyproject.toml  requirements.txt  setup.py
geoutils/: __init__.py
geoutils/bias_correction/: __init__.py  quantile_mapping.py
geoutils/countries/: __init__.py  capacities.py  countries.py  offshore_shapes.geojson
geoutils/cutouts/: __init__.py  prepare_cutout.py  prepare_input.py  test_cutout.py
geoutils/energy/: __init__.py  test_capacity.ipynb
geoutils/geoanalysis/: __init__.py  qg_forcing.py
geoutils/geodata/: __init__.py  base_dataset.py  helmholtz_decomposition.py  interpolate_data.py  moist_static_energy.py  moisture_flux.py  multilevel_pressure.py  orography.py  prepare_datasets.py  process_mswep.py  regrid_data.py  reset_grid.py  reset_hours.py  rossby_wave_source.py  solar_radiation.py  wind_dataset.py
geoutils/grid/: __init__.py  fekete.py  grid.py
geoutils/indices/: __init__.py  air_index.py  atlantic_nino.py  bsiso_index.py  cah_index.py  cgt_index.py  compute_rmm.py  enso_utils.py  indices_utils.py  iod_utils.py  mei_v2_index.py  mjo_index.py  nao.py  nao_index.py  omi_index.py  pdo_index.py  qbo_index.py  rmm_index.py  srp_index.py  tej_index.py
geoutils/oscillations/: atlantic_nino.py  bsiso_index.py  cgt_index.py  enso_utils.py  iod_utils.py  mjo_index.py  nao.py  qbo_index.py
geoutils/plotting/: __init__.py  dendrogram.py  map_plots.py  plot_settings.py  plots.py  plotting_utils.py  videos.py  xy_plots.py
geoutils/preprocessing/: __init__.py  interpolate.py  merge_files.py  open_nc_file.py
geoutils/tsa/: __init__.py  causal_precursors.py  event_synchronization.py  fft_analysis.py  filters.py  iaaft.py  phase_coherence.py  predict.py  propagation.py  synchronization.py  time_clustering.py  time_series_analysis.py  transformations.py  wavenumber_frequency_functions.py  xdf.py
geoutils/utils/: __init__.py  enso_utils.py  file_utils.py  general_utils.py  indices_utils.py  iod_utils.py  met_utils.py  spatial_mean.py  spatial_utils.py  string_utils.py  (+3 more)
tests/: conftest.py  test_packaging.py  test_plotting.py  test_spatial_utils.py  test_time_utils.py
tutorials/: african_jets.ipynb  analysis_tutorial.ipynb  climate_indices.ipynb  clustering_india rainfall.ipynb  create_grid.ipynb  cross_section.ipynb  cross_section.py  cross_section_metpy.py  deepmip.py  ere_data.py  global_monsoon.ipynb  hovmoeller_diagrams.ipynb  interpolate_tutorial.ipynb  lpj_guess_input.py  mjo_frequency.ipynb  overturning_circulation.py  plotting_tutorial.ipynb  precipitation_analysis.ipynb
(+30 files in other folders)
